# Curator

./: .gitignore  CLAUDE.md  findings.md  progress.md  pyproject.toml  task_plan.md
.claude/skills/nemo-curator-docs/: SKILL.md
.github/actions/build-container/: action.yml
.github/actions/test-template/: action.yml
.github/workflows/: cicd-main.yml  fern-docs-ci.yml  install-test.yml
benchmarking/: README.md  nightly-benchmark.yaml  run.py
benchmarking/runner/: entry.py  path_resolver.py  ray_cluster.py  session.py  utils.py
benchmarking/scripts/: ndd_benchmark.py
benchmarking/tools/: build_docker.sh  gen_runscript_vars.py  run.sh
docker/: Dockerfile
docker/common/: install_haproxy.sh
docs/curate-text/: index.md
docs/curate-text/process-data/: index.md
docs/curate-text/process-data/language-management/: index.md  translation.md
docs/get-started/: text.md
fern/: docs.yml  package.json
fern/versions/: main.yml  v26.04.yml
fern/versions/main/pages/: index.mdx
fern/versions/main/pages/about/: index.mdx  key-features.mdx
fern/versions/main/pages/about/concepts/: auto-balancing.mdx  deduplication.mdx  index.mdx  resource-allocation.mdx  streaming.mdx  throughput.mdx
fern/versions/main/pages/about/release-notes/: index.mdx  migration-faq.mdx  migration-guide.mdx
fern/versions/main/pages/admin/: index.mdx
fern/versions/main/pages/admin/deployment/: index.mdx  requirements.mdx
fern/versions/main/pages/admin/integrations/: index.mdx
fern/versions/main/pages/api-reference/: composite-stage.mdx  index.mdx  pipeline.mdx  processing-stage.mdx  resources.mdx
fern/versions/main/pages/api-reference/executors/: experimental.mdx  xenna-executor.mdx
fern/versions/main/pages/api-reference/tasks/: audio-task.mdx  document-batch.mdx  image-batch.mdx  video-task.mdx
fern/versions/main/pages/curate-audio/: index.mdx  save-export.mdx
fern/versions/main/pages/curate-audio/load-data/: custom-manifests.mdx  fleurs-dataset.mdx  index.mdx  local-files.mdx
fern/versions/main/pages/curate-audio/process-data/: index.mdx
fern/versions/main/pages/curate-audio/tutorials/: alm.mdx  beginner.mdx  index.mdx  readspeech.mdx
fern/versions/main/pages/curate-images/: index.mdx  save-export.mdx
fern/versions/main/pages/curate-images/load-data/: index.mdx  tar-archives.mdx
fern/versions/main/pages/curate-images/process-data/: index.mdx
fern/versions/main/pages/curate-images/tutorials/: beginner.mdx  dedup-workflow.mdx  index.mdx
fern/versions/main/pages/curate-text/: index.mdx  save-export.mdx
fern/versions/main/pages/curate-text/load-data/: arxiv.mdx  common-crawl.mdx  custom.mdx  index.mdx  read-existing.mdx  wikipedia.mdx
fern/versions/main/pages/curate-text/process-data/: index.mdx
fern/versions/main/pages/curate-text/synthetic/: index.mdx  inference-server.mdx  llm-client.mdx  multilingual-qa.mdx  nemo-data-designer.mdx
fern/versions/main/pages/curate-text/tutorials/: index.mdx
fern/versions/main/pages/curate-video/: index.mdx  save-export.mdx
fern/versions/main/pages/curate-video/load-data/: index.mdx
fern/versions/main/pages/curate-video/process-data/: captions-preview.mdx  clipping.mdx  dedup.mdx  embeddings.mdx  filtering.mdx  frame-extraction.mdx  index.mdx  transcoding.mdx
fern/versions/main/pages/curate-video/tutorials/: beginner.mdx  index.mdx  split-dedup.mdx
fern/versions/main/pages/get-started/: audio.mdx  image.mdx  index.mdx  installation.mdx  text.mdx  video.mdx
fern/versions/main/pages/reference/: index.mdx  related-tools.mdx
fern/versions/main/pages/reference/infrastructure/: container-environments.mdx  execution-backends.mdx  gpu-processing.mdx  index.mdx  memory-management.mdx  monitoring.mdx  per-stage-runtime.mdx  resumable-processing.mdx
fern/versions/v25.09/pages/api-reference/: index.mdx
fern/versions/v25.09/pages/reference/: index.mdx
fern/versions/v26.04/pages/curate-video/: index.mdx
fern/versions/v26.04/pages/get-started/: installation.mdx  video.mdx
nemo_curator/backends/ray_actor_pool/: raft_adapter.py
nemo_curator/core/: constants.py  utils.py
nemo_curator/core/serve/: base.py
nemo_curator/core/serve/dynamo/: backend.py  vllm.py
nemo_curator/models/client/: openai_client.py
nemo_curator/stages/audio/: __init__.py
nemo_curator/stages/audio/alm/: __init__.py
nemo_curator/stages/audio/alm/pretrain/: __init__.py  extraction.py  finalize.py  io.py  pipeline.py  planning.py  stages.py  utils.py
nemo_curator/stages/deduplication/semantic/: kmeans.py  workflow.py
nemo_curator/stages/text/classifiers/: __init__.py
nemo_curator/stages/text/deduplication/: semantic.py
nemo_curator/stages/text/embedders/: vllm.py
nemo_curator/stages/text/experimental/: __init__.py
nemo_curator/stages/text/experimental/translation/: __init__.py  pipeline.py
nemo_curator/stages/text/utils/: __init__.py  text_utils.py
pr-1898-audio-pretrain/: findings.md  task_plan.md
pretrain_cut/: findings.md  progress.md  task_plan.md
pretrain_cut-tar-audio/: findings.md  progress.md  task_plan.md
tests/: L0_Unit_Test_CPU.sh  L0_Unit_Test_GPU.sh
tests/backends/: test_integration.py
tests/core/serve/: test_runtime_env.py
tests/core/serve/dynamo/: test_backend.py  test_integration.py
tests/models/client/: test_openai_client.py
tests/stages/audio/alm/pretrain/: sample_long_form_manifest.jsonl  test_extraction.py  test_finalize.py  test_helpers.py  test_io.py  test_no_speaker_cut.py  test_pipeline.py  test_planning.py  test_stages.py
tests/stages/deduplication/semantic/: test_kmeans.py
tests/stages/text/classifiers/: test_classifiers_init.py
tests/stages/text/experimental/translation/: conftest.py  test_backends.py  test_field_utils.py  test_output_utils.py  test_pipeline.py  test_prompts.py  test_reassembly.py  test_segmentation.py  test_translate.py
tutorials/audio/audio_no_speaker_cut/: run.py
tutorials/audio/audio_pretrain/: README.md  diarization_cut.py  pipeline.py  pretrain_cut.py  run.py
tutorials/audio/single_speaker_filter/: run.py
(+108 files in other folders)
